Lumiere_Research_Project_Predicting_Air_Quality_and_Population_Density.ipynb

--- a/Lumiere_Research_Project_Predicting_Air_Quality_and_Population_Density.ipynb
+++ b/Lumiere_Research_Project_Predicting_Air_Quality_and_Population_Density.ipynb
@@ -22,7 +22,7 @@
         "import requests\n",
         "\n",
         "# Replace with your API key and desired coordinates\n",
-        "API_KEY = \"69849d8a1edffe060dd0e9ace4083847\"\n",
+        "API_KEY = \"api key"\n",
         "lat = 17.3850   # Hyderabad latitude\n",
         "lon = 78.4867   # Hyderabad longitude\n",
         "\n",
